# QR_Generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_run.sh  install_dependencies.sh
include/: qrgenerator.h
src/: main.cpp  qr_generation.cpp  qr_reader.cpp  qrgenerator.cpp  ui_setup.cpp  utils.cpp  wifi_handler.cpp
